--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       - id: 'deploy'
         uses: 'google-github-actions/upload-cloud-storage@v2'
-        with: 
+        with:
           project_id:'devops-project-123-451610'
-          path: '*.html'
-          destination: 'devops-static-site-bucket'
+          path:'/*.html'
+          destination:'devops-static-site-bucket'
       
       
